--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -110,15 +110,15 @@
                             <div class="col-xl-3 col-lg-3 col-md-6">
                             <div class="product-block-one">
                               <div class="product-block-one-image">
-                                <div class="image"><img [src]="getSafeImagePath(product.image)" [alt]="product.name" width="300"
-                                                        height="200"
+                                <div class="image"><img [src]="getSafeImagePath(product.image)" [alt]="product.name" width="800"
+                                                        height="800"
                                                         loading="lazy"></div>
                               </div>
                               <div class="product-block-one-cintent">
-                                <h4 class="fs_15"><a href="#">{{ product.name }}</a></h4>
+                                <h4 class="fs_15"><a href="product-detail/{{ product._id }}">{{ product.name }}</a></h4>
                                 <div class="price-container">
                                   <div class="price fs_15 fw_medium">AR <span>{{ product.price}}</span></div>
-                                  <div class="price-cart"><a href="#"><i class="flaticon-shopping-cart"></i></a></div>
+                                  <div class="price-cart"><a href="product-detail/{{ product._id }}"><i class="flaticon-shopping-cart"></i></a></div>
                                 </div>
                               </div>
                             </div>
@@ -196,10 +196,10 @@
                                               loading="lazy"></div>
                     </div>
                     <div class="product-block-one-cintent">
-                      <h4 class="fs_15"><a href="#">{{ product.name }}</a></h4>
+                      <h4 class="fs_15"><a href="product-detail/{{ product._id }}">{{ product.name }}</a></h4>
                       <div class="price-container">
                         <div class="price fs_15 fw_medium">AR {{ product.price}}<span>{{ calculateDiscountedPrice(product.price, promotion.discount) }}</span></div>
-                        <div class="price-cart"><a href="#"><i class="flaticon-shopping-cart"></i></a></div>
+                        <div class="price-cart"><a href="product-detail/{{ product._id }}"><i class="flaticon-shopping-cart"></i></a></div>
                       </div>
                     </div>
                   </div>
@@ -219,7 +219,7 @@
                     <img [src]="getSafeImagePath(product.image)" [alt]="product.name">
                   </div>
                   <div class="item-content">
-                    <h5><a href="#">{{ product.name }}</a></h5>
+                    <h5><a href="product-detail/{{ product._id }}">{{ product.name }}</a></h5>
                     <h6>AR {{ calculateDiscountedPrice(product.price, bestActivePromotion.discount) }}<span>{{ product.price}}</span></h6>
                   </div>
                 </div>
