--- a/src/app/page/client/cart/cart.component.html
+++ b/src/app/page/client/cart/cart.component.html
@@ -42,72 +42,36 @@
               </tr>
               </thead>
               <tbody>
-              <tr>
-                <td colspan="4" class="prod-column">
-                  <div class="column-box">
-                    <div class="remove-btn">
-                      <i class="fa fa-times"></i>
-                    </div>
-                    <div class="prod-thumb">
-                      <img src="assets-bosh/images/product/f-1.png" alt="parts">
-                    </div>
-                    <div class="prod-title">
-                      Lenovo IdeaPad Slim 250U <br />15.6" Laptop
-                    </div>
-                  </div>
-                </td>
-                <td class="price">$70.30</td>
-                <td class="qty">
-                  <div class="item-quantity">
-                    <input class="quantity-spinner" type="text" value="1" name="quantity">
-                  </div>
-                </td>
-                <td class="sub-total">$70.30</td>
-              </tr>
-              <tr>
-                <td colspan="4" class="prod-column">
-                  <div class="column-box">
-                    <div class="remove-btn">
-                      <i class="fa fa-times"></i>
-                    </div>
-                    <div class="prod-thumb">
-                      <img src="assets-bosh/images/product/f-2.png" alt="parts">
-                    </div>
-                    <div class="prod-title">
-                      Dell Optiplex 3060 Core i5 <br />8th Gen
-                    </div>
-                  </div>
-                </td>
-                <td class="price">$50.00</td>
-                <td class="qty">
-                  <div class="item-quantity">
-                    <input class="quantity-spinner" type="text" value="1" name="quantity">
-                  </div>
-                </td>
-                <td class="sub-total">$50.00</td>
-              </tr>
-              <tr>
-                <td colspan="4" class="prod-column">
-                  <div class="column-box">
-                    <div class="remove-btn">
-                      <i class="fa fa-times"></i>
-                    </div>
-                    <div class="prod-thumb">
-                      <img src="assets-bosh/images/product/f-3.png" alt="parts">
-                    </div>
-                    <div class="prod-title">
-                      Apple TV 4K 32GB 6th Gen <br />TV Box
-                    </div>
-                  </div>
-                </td>
-                <td class="price">$85.00</td>
-                <td class="qty">
-                  <div class="item-quantity">
-                    <input class="quantity-spinner" type="text" value="1" name="quantity">
-                  </div>
-                </td>
-                <td class="sub-total">$85.00</td>
-              </tr>
+                @if (cart?.products?.length) {
+                  @for (item of cart.products; track item._id) {
+                    <tr>
+                      <td colspan="4" class="prod-column">
+                        <div class="column-box">
+                          <div class="remove-btn">
+                            <i class="fa fa-times" (click)="cartService.removeItem(item._id, true).subscribe()"></i>
+                          </div>
+                          <div class="prod-thumb">
+                            <img [src]="getSafeImagePath(item.productId?.image)" [alt]="item.name">
+                          </div>
+                          <div class="prod-title">
+                            {{ item.productId?.name }}
+                          </div>
+                        </div>
+                      </td>
+                      <td class="price">AR {{ item.productId?.price }}</td>
+                      <td class="qty">
+                        <div class="item-quantity">
+                          <div class="quantity-control">
+                            <button (click)="decrementQuantity(item, true)">-</button>
+                            <span>{{ item.productId?.quantity }}</span>
+                            <button (click)="incrementQuantity(item, true)">+</button>
+                          </div>
+                        </div>
+                      </td>
+                      <td class="sub-total">$70.30</td>
+                    </tr>
+                  }
+                }
               </tbody>
             </table>
           </div>
