--- a/src/app/page/product-details/product-details.component.html
+++ b/src/app/page/product-details/product-details.component.html
@@ -51,7 +51,7 @@
               <div class="addto-cart-box p_relative d_block mb_35">
                 <ul class="clearfix">
                   <li class="item-quantity p_relative d_block float_left mr_10"><input class="quantity-spinner" type="number" value="1" name="quantity"></li>
-                  <li class="p_relative d_block float_left mr_10"><button type="button" class="theme-btn theme-btn-eight">Add To Cart</button></li>
+                  <li class="p_relative d_block float_left mr_10"><button type="button" class="theme-btn theme-btn-eight" (click)="addToCart(product._id)">Add To Cart</button></li>
                 </ul>
               </div>
               <div class="other-option">
