--- a/src/app/components/menubar-mechanic/menubar-mechanic.component.html
+++ b/src/app/components/menubar-mechanic/menubar-mechanic.component.html
@@ -12,8 +12,8 @@
 
         <ul class="right-info">
           <li><a href="#" class="search-btn"><div class="shopping-cart"><i class="fa fa-comments"></i><span class="count">2</span></div></a></li>
-          <li><a href="#" class="search-btn"><i class="icon-user"></i> <p>My Account <span>Hello, Sign in</span></p></a></li>
-          <li><a href="#" class="search-btn"><i class="fa fa-power-off"></i></a></li>
+          <li><a href="#" class="search-btn"><i class="icon-user"></i> <p>My Account <span>Hello, Mechanics</span></p></a></li>
+          <li><a (click)="logoff()" class="search-btn" style="cursor: pointer;"><i class="fa fa-power-off"></i></a></li>
         </ul>
       </div>
     </div>
