add rdv design and add get reservation by userId

--- a/src/app/components/menubar-manager/menubar-manager.component.html
+++ b/src/app/components/menubar-manager/menubar-manager.component.html
@@ -11,8 +11,8 @@
         </div>
 
         <ul class="right-info">
-          <li><a href="#" class="search-btn"><i class="icon-user"></i> <p>My Account <span>Hello, Manager</span></p></a></li>
-          <li><a href="#" class="search-btn"><i class="fa fa-power-off"></i></a></li>
+          <li><a href="#" class="search-btn"><i class="icon-user"></i> <p>My Account <span>Hello, {{username}}</span></p></a></li>
+          <li><a (click)="logoff()" class="search-btn"><i class="fa fa-power-off"></i></a></li>
         </ul>
       </div>
     </div>
