--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
         <li><a href="/client/services" [class.active]="activeMenu === 'services'">Services</a></li>
         @if (isConnected) {
           <li><a href="/client/history" [class.active]="activeMenu === 'history'">Historique commande</a></li>
-          <li><a href="/about" [class.active]="activeMenu === 'about'">Rendez-vous</a></li>
+          <li><a href="/client/rdv" [class.active]="activeMenu === 'rdv'">Rendez-vous</a></li>
         }
       </ul>
     </div>
